# Car-Damage-Detector

./: .dockerignore  .gitignore  Dockerfile  README.md  chatgpt.py  main.py  pyproject.toml  requirements.txt  resnet.py
.github/workflows/: carapp-AutoDeployTrigger-ce6c3388-6ad1-42e1-8401-f386412828a0.yml
